# PSPAsteroids

./: .gitignore  CMakeLists.txt  README.md  main.c  upload.sh
.cache/clangd/index/: asteroid.c.4BFA23E56D9E3A02.idx  asteroid.h.76BD07F4F9C8EBB8.idx  bullet.c.B8C324B6793AB8C7.idx  bullet.h.BC2704E29A424B70.idx  callback.c.6078598293AEC14A.idx  callback.h.3AB633639B557CD8.idx  config.h.4ECF17457F43496C.idx  extra.c.B700735875B565BF.idx  extra.h.AFD58323B207836A.idx  font.h.377CFE1A8190EE75.idx  game.c.3376B92A178C24C6.idx  game.h.99555A28A4403665.idx  gu.c.63E2E497CA0DF02C.idx  gu.h.0F137E5903F99E64.idx  heart.c.8EA6725EE097F877.idx  heart.h.933706DDF7082748.idx  main.c.C1F5D722CE33C969.idx  sound.c.2C3837683638E0ED.idx  sound.h.D824D6DFF3CA5720.idx  text.c.6BFDF5CEA1F91E71.idx  text.h.7194E2DF188779E2.idx  triangle.c.4B86FBCBF4A653AE.idx  triangle.h.7D7A19D79CF50132.idx  vertex.h.6E4961723725B4CF.idx
common/: callback.c  callback.h  config.h  extra.c  extra.h
graphics/: gu.c  gu.h
src/: heart.c  heart.h  main.c  triangle.c  triangle.h  vertex.h
src/audio/: sound.c  sound.h
src/entities/: asteroid.c  asteroid.h  bullet.c  bullet.h  heart.c  heart.h  triangle.c  triangle.h
src/game/: game.c  game.h
src/input/: input.c  input.h
src/text/: font.h  text.c  text.h
